k8s/bpsk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkstack-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  #   # cert-manager.io/cluster-issuer: "letsencrypt-staging"
  #   cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
# tls not working right now
  # tls:
  # - hosts:
  #   - home.ghart.space
  #   # - ghart.space
  #   secretName: home-ghart-space-cert-staging
  rules:
  - host: "bpsk.ghart.space"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bpsk-svc
            port:
              number: 80
